<resources>
    <string name="app_name">OGN Viewer</string>
    <string name="title_activity_maps">OGN Viewer</string>

    <!-- APRS empty dialog -->
    <string name="hint_aprs_filter">(empty APRS filter --- danger!)</string>
    <string name="aprs_filter_title">"Set APRS filter"</string>
    <string name="empty_aprs_filter_message">"Caution: An empty APRS filter can make the app extreme slow. Long click your position on the map to set a new filter."</string>
    <string name="empty_aprs_filter_toast">"Long click your position on the map to set a new filter."</string>

    <!-- Main Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_manageids">Manage IDs</string>
    <string name="action_currentlocation">Go to current location</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>

    <!-- Aircraft Dialog Menu -->
    <string name="action_add_item">Add item</string>
    <string name="action_import_items">Import items</string>
    <string name="action_export_items">Export items</string>
    <string name="action_delete_all_items">Delete all items</string>
    <string name="notification_id">ogn_notification</string>

    <!-- Aircraft Dialog -->
    <string name="empty_address">(no radio ID)</string>
    <string name="empty_registration_number">(no registration number)</string>
    <string name="empty_competition_id">(no competition ID)</string>
    <string name="empty_owner">(no owner)</string>
    <string name="empty_home_base">(no home base)</string>
    <string name="empty_model">(no model)</string>
    <string name="empty_frequency">(no frequency)</string>

    <string name="key_aprsfilter_preference">aprsfilter_preference</string>
    <string name="title_aprsfilter_preference">Manual filter</string>
    <string name="summary_aprsfilter_preference">Type here your stuff</string>
    <string name="dialog_title_aprsfilter_preference">APRS filter</string>
    <string name="empty_aprsfilter_preference">(empty)</string>

    <string name="key_aprsserver_preference">aprsserver_preference</string>
    <string name="title_aprsserver_preference">APRS server</string>
    <string name="summary_aprsserver_preference">Type here your stuff</string>
    <string name="dialog_title_aprsserver_preference">APRS server</string>
    <string name="empty_aprsserver_preference">(empty)</string>

    <!-- Settings/Preferences -->
    <string name="key_movingfilter_preference">movingfilter_preference</string>
    <string name="title_movingfilter_preference">Moving APRS filter</string>
    <string name="summary_movingfilter_preference">Type here your stuff</string>
    <string name="toast_movingfilter_preference">Moving filter is active</string>

    <string name="key_movingfilter_range_preference">movingfilter_range_preference</string>
    <string name="title_movingfilter_range_preference">Moving filter range</string>
    <string name="summary_movingfilter_range_preference">Type here your stuff</string>
    <string name="dialog_title_movingfilter_range_preference">Map type</string>

    <string name="key_showaircrafts_preference">showaircrafts_preference</string>
    <string name="title_showaircrafts_preference">Show Aircraft</string>
    <string name="summary_showaircrafts_preference">on</string>

    <string name="key_showreceivers_preference">showreceivers_preference</string>
    <string name="title_showreceivers_preference">Show Receivers</string>
    <string name="summary_showreceivers_preference">off</string>

    <string name="key_map_type_preference">map_type_aircraft_preference</string>
    <string name="title_map_type_preference">Map type</string>
    <string name="summary_map_type_preference">Terrain</string>
    <string name="dialog_title_map_type_preference">Map type</string>

    <string name="key_screen_orientation_preference">screen_orientation_preference</string>
    <string name="title_screen_orientation_preference">Screen Orientation</string>
    <string name="summary_screen_orientation_preference">Automatic</string>
    <string name="dialog_title_screen_orientation_preference">Screen Orientation</string>

    <string name="key_keepscreenon_preference">keepscreenon_preference</string>
    <string name="title_keepscreenon_preference">Keep Screen On</string>
    <string name="summary_keepscreenon_preference">off</string>

    <string name="key_shownonmoving_preference">shownonmoving_preference</string>
    <string name="title_shownonmoving_preference">Show Non-Moving</string>
    <string name="summary_shownonmoving_preference">on</string>

    <string name="key_showregistration_preference">showregistration_preference</string>
    <string name="title_showregistration_preference">Show Registration</string>
    <string name="summary_showregistration_preference">on</string>

    <string name="key_rotate_aircraft_preference">rotate_aircraft_preference</string>
    <string name="title_rotate_aircraft_preference">Rotate Aircraft</string>
    <string name="summary_rotate_aircraft_preference">off</string>

    <string name="key_aircraft_flightpath_preference">aircraft_flightpath_preference</string>
    <string name="title_aircraft_flightpath_preference">Flight Path</string>
    <string name="summary_aircraft_flightpath_preference">Standard</string>
    <string name="dialog_title_aircraft_flightpath_preference">Flight Path</string>

    <string name="key_aircraft_colorisation_preference">colorisation_aircraft_preference</string>
    <string name="title_colorisation_preference">Coloration</string>
    <string name="summary_aircraft_colorisation_preference">Altitude</string>
    <string name="dialog_title_aircraft_colorisation_preference">Coloration</string>

    <string name="key_aircraft_timeout_preference">timeout_aircraft_preference</string>
    <string name="title_timeout_preference">Remove inactive aircraft after</string>
    <string name="summary_aircraft_timeout_preference">Timeout</string>
    <string name="dialog_title_timeout_preference">Timeout</string>

    <string name="key_receiver_colorisation_preference">colorisation_receiver_preference</string>
    <string name="summary_receiver_colorisation_preference">Aircraft Count</string>

    <string name="key_shownotactive_preference">shownotactive_preference</string>
    <string name="title_shownotactive_preference">Show Not-active</string>
    <string name="summary_shownotactive_preference">on</string>

    <string name="key_altitude_unit_preference">altitude_preference</string>
    <string name="title_altitude_unit_preference">Altitude</string>
    <string name="summary_altitude_unit_preference">Altitude</string>
    <string name="dialog_title_altitude_unit_preference">Altitude</string>

    <string name="key_groundspeed_unit_preference">groundspeed_preference</string>
    <string name="title_groundspeed_unit_preference">Ground Speed</string>
    <string name="summary_groundspeed_unit_preference">Ground Speed</string>
    <string name="dialog_title_groundspeed_unit_preference">Ground Speed</string>

    <string name="key_verticalspeed_unit_preference">verticalspeed_preference</string>
    <string name="title_verticalspeed_unit_preference">Vertical Speed</string>
    <string name="summary_verticalspeed_unit_preference">Vertical Speed</string>
    <string name="dialog_title_verticalspeed_unit_preference">Vertical Speed</string>

    <string name="key_tcp_server_active_preference">tcp_server_preference</string>
    <string name="title_tcp_server_active_preference">TCP Server</string>
    <string name="summary_tcp_server_active_preference">TCP Server</string>
    <string name="dialog_title_tcp_server_active_preference">TCP Server</string>

    <!-- Entry keys and values of arrays -->
    <string name="default_aprsserver">aprs.glidernet.org</string>

    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="map_none">None</string>
    <string name="map_normal">Normal</string>

    <string name="orientation_automatic">Automatic</string>
    <string name="orientation_portrait">Portrait</string>
    <string name="orientation_landscape_lr">Landscape L+R</string>

    <string name="altitude">Altitude</string>
    <string name="speed">Speed</string>
    <string name="aircraft_type">Aircraft type</string>

    <string name="time_30s">30 s</string>
    <string name="time_1m">1 min</string>
    <string name="time_2m">2 min</string>
    <string name="time_5m">5 min</string>
    <string name="time_10m">10 min</string>
    <string name="time_30m">30 min</string>
    <string name="time_1h">1 h</string>

    <string name="distance_10km">10km</string>
    <string name="distance_20km">20km</string>
    <string name="distance_30km">30km</string>
    <string name="distance_40km">40km</string>
    <string name="distance_50km">50km</string>
    <string name="distance_60km">60km</string>
    <string name="distance_70km">70km</string>
    <string name="distance_80km">80km</string>
    <string name="distance_90km">90km</string>
    <string name="distance_100km">100km</string>

    <string name="unit_meters">m</string>
    <string name="unit_feet">ft</string>
    <string name="unit_kmh">km/h</string>
    <string name="unit_mph">mph</string>
    <string name="unit_kt">kt</string>
    <string name="unit_ms">m/s</string>
    <string name="unit_fpm">ft/min</string>

    <string name="flightpath_none">None</string>
    <string name="flightpath_standard">Standard</string>
    <string name="flightpath_multicolor">Multicolor</string>
    <string name="flightpath_multicolor_descr">Multicolor (slower)</string>

    <string name="aircraft_count">Aircraft Count</string>
    <string name="beacon_count">Beacon Count</string>

    <!-- Keys for save the last known lat,lon,zoom -->
    <string name="key_latitude_preference">latitude_preference</string>
    <string name="key_longitude_preference">longitude_preference</string>
    <string name="key_zoom_preference">zoom_preference</string>
</resources>
