<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextAddress"
        android:layout_gravity="center_horizontal"
        android:hint="@string/empty_address"
        android:inputType="textCapCharacters" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextRegId"
        android:layout_gravity="center_horizontal"
        android:hint="@string/empty_registration_number"
        android:inputType="textCapCharacters" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextCN"
        android:layout_gravity="center_horizontal"
        android:hint="@string/empty_competition_id" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextOwner"
        android:layout_gravity="center_horizontal"
        android:hint="@string/empty_owner"
        android:inputType="textCapWords" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextHomeBase"
        android:layout_gravity="center_horizontal"
        android:hint="@string/empty_home_base"
        android:visibility="gone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextModel"
        android:layout_gravity="center_horizontal"
        android:hint="@string/empty_model"
        android:inputType="textCapWords" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextFreq"
        android:layout_gravity="center_horizontal"
        android:hint="@string/empty_frequency"
        android:inputType="numberDecimal"
        android:visibility="gone"/>

</LinearLayout>